01-kubernetes-basics-part-2/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: simple-deployment
spec:
    replicas: 2
    selector:
       matchLabels:
          app: simple-app
    template:
       metadata:
          labels:
             app: simple-app
       spec:
          containers:
          - name: simple-app
            image: drsklifnsk/otus-sa:simple-app-v1
            ports:
              - name: web 
                containerPort: 8000
            livenessProbe:
              httpGet:
                port: web
                path: /
              initialDelaySeconds: 5
              periodSeconds: 10
            readinessProbe:
              httpGet:
                port: web
                path: /health/
              initialDelaySeconds: 5
              periodSeconds: 5
