01-kubernetes-basics-part-2/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-service
spec:
  selector:
    app: simple-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: NodePort
